update contact info

--- a/web/index.html
+++ b/web/index.html
@@ -47,5 +47,12 @@ The repository is signed with <a href="ACCC4CF8.asc">gpg key ACCC4CF8</a>.
 <ul>
 	<li><a href="http://wiki.postgresql.org/wiki/ExtensionPackaging">Extension Packaging</a> (PostgreSQL Wiki)
 	<li><a href="http://wiki.debian.org/pkg-postgresql">pkg-postgresql</a> (Debian Wiki)
-	<li><a href="http://archives.postgresql.org/pgsql-pkg-debian/">pgsql-pkg-debian mailing list</a>
+</ul>
+
+<h2>Contact</h2>
+
+<ul>
+	<li>pgsql-pkg-debian@postgresql.org (<a href="http://archives.postgresql.org/pgsql-pkg-debian/">Archives</a>)
+	<li>#postgresql-apt @ irc.freenode.net
+	<li>Christoph Berg &lt;myon@debian.org&gt;
 </ul>
